--- a/portainer/portainer-deployment.yaml
+++ b/portainer/portainer-deployment.yaml
@@ -55,6 +55,7 @@ spec:
     metadata:
       labels:
         app: portainer
+        fargate: enabled
     spec:
       containers:
       - name: portainer
@@ -87,6 +88,7 @@ spec:
     metadata:
       labels:
         app: portainer-agent
+        fargate: enabled
     spec:
       serviceAccountName: portainer-sa-clusteradmin
       containers:
