--- a/karpenter/nodepool-arm64.yaml
+++ b/karpenter/nodepool-arm64.yaml
@@ -2,7 +2,7 @@
 apiVersion: karpenter.sh/v1
 kind: NodePool
 metadata:
-  name: arm64-nodes
+  name: nodepool-arm64
 spec:
   weight: 100  # 高优先级 - 推荐使用 ARM64
   template:
@@ -15,7 +15,7 @@ spec:
       nodeClassRef:
         group: karpenter.k8s.aws
         kind: EC2NodeClass
-        name: arm64-nodeclass
+        name: nodeclass-arm64
       requirements:
         - key: kubernetes.io/arch
           operator: In
@@ -54,7 +54,7 @@ spec:
 apiVersion: karpenter.k8s.aws/v1
 kind: EC2NodeClass
 metadata:
-  name: arm64-nodeclass
+  name: nodeclass-arm64
 spec:
   # 使用 Amazon Linux 2023
   amiFamily: AL2023
