--- a/portainer/portainer-efs-pvc.yaml
+++ b/portainer/portainer-efs-pvc.yaml
@@ -1,16 +1,3 @@
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: efs-sc
-provisioner: efs.csi.aws.com
-parameters:
-  provisioningMode: efs-ap
-  fileSystemId: fs-0123456789abcdef0  # 新创建的 EFS ID
-  directoryPerms: "700"
-  gidRangeStart: "1000"
-  gidRangeEnd: "2000"
-  basePath: "/portainer"
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -19,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: efs-portainer
+  storageClassName: efs-portainer  # 使用专用的 efs-portainer 存储类
   resources:
     requests:
       storage: 5Gi
