--- a/karpenter/nodepool-amd64.yaml
+++ b/karpenter/nodepool-amd64.yaml
@@ -102,6 +102,9 @@ spec:
         karpenter.sh/discovery: "eks-karpenter-env"
   
   instanceProfile: "KarpenterNodeInstanceProfile-eks-karpenter-env"
+
+  metadataOptions:
+    httpPutResponseHopLimit: 2    # 允许容器访问IMDS
   
   blockDeviceMappings:
     - deviceName: /dev/xvda
