--- a/karpenter/nodepool-arm64.yaml
+++ b/karpenter/nodepool-arm64.yaml
@@ -113,7 +113,10 @@ spec:
         karpenter.sh/discovery: "eks-karpenter-env"
   
   instanceProfile: "KarpenterNodeInstanceProfile-eks-karpenter-env"
-  
+
+  metadataOptions:
+    httpPutResponseHopLimit: 2    # 允许容器访问IMDS
+    
   blockDeviceMappings:
     - deviceName: /dev/xvda
       ebs:
