docs: update Bitwarden deployment to use Lite version

--- a/applications/bitwarden/bitwarden-deployment.yaml
+++ b/applications/bitwarden/bitwarden-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: bitwarden
-        image: ghcr.io/bitwarden/self-host:beta
+        image: ghcr.io/bitwarden/lite:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
