feat: improve health checks and node consolidation settings
  * Simplifies health check mechanism for more reliable detection
  * Reduces frequency of gpu node migrations

--- a/applications/qwen3-speech/qwen3-tts-deployment.yaml
+++ b/applications/qwen3-speech/qwen3-tts-deployment.yaml
@@ -80,12 +80,10 @@ spec:
             memory: 8Gi
             nvidia.com/gpu: 1
         livenessProbe:
-          httpGet:
-            path: /health
+          tcpSocket:
             port: 8880
           initialDelaySeconds: 120
           periodSeconds: 30
-          timeoutSeconds: 10
           failureThreshold: 5
         readinessProbe:
           httpGet:
