--- a/applications/qwen3-speech/qwen3-asr-deployment.yaml
+++ b/applications/qwen3-speech/qwen3-asr-deployment.yaml
@@ -75,22 +75,27 @@ spec:
             cpu: "2"
             memory: 8Gi
             nvidia.com/gpu: 1
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 8000
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 60
         livenessProbe:
           httpGet:
             path: /health
             port: 8000
-          initialDelaySeconds: 120
           periodSeconds: 30
           timeoutSeconds: 10
-          failureThreshold: 5
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /health
             port: 8000
-          initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 5
-          failureThreshold: 5
+          failureThreshold: 3
 
       volumes:
       - name: models
