--- a/applications/qwen3-speech/qwen3-speech-ingress.yaml
+++ b/applications/qwen3-speech/qwen3-speech-ingress.yaml
@@ -37,6 +37,7 @@ metadata:
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8880}]'
     alb.ingress.kubernetes.io/healthcheck-path: /health
+    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=1800
 spec:
   ingressClassName: alb
   rules:
