--- a/applications/qwen3-speech/qwen3-tts-deployment.yaml
+++ b/applications/qwen3-speech/qwen3-tts-deployment.yaml
@@ -79,20 +79,25 @@ spec:
             cpu: "2"
             memory: 8Gi
             nvidia.com/gpu: 1
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 8880
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 30
         livenessProbe:
           tcpSocket:
             port: 8880
-          initialDelaySeconds: 120
           periodSeconds: 30
-          failureThreshold: 5
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /health
             port: 8880
-          initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 5
-          failureThreshold: 5
+          failureThreshold: 3
 
       volumes:
       - name: models
