--- a/applications/qwen3-speech/qwen3-tts-deployment.yaml
+++ b/applications/qwen3-speech/qwen3-tts-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       initContainers:
       - name: model-downloader
-        image: 222829864634.dkr.ecr.ap-southeast-1.amazonaws.com/qwen3-tts:latest
+        image: 123456789012.dkr.ecr.ap-southeast-1.amazonaws.com/qwen3-tts:latest
         securityContext:
           runAsUser: 0
         command:
@@ -45,7 +45,7 @@ spec:
 
       containers:
       - name: tts
-        image: 222829864634.dkr.ecr.ap-southeast-1.amazonaws.com/qwen3-tts:latest
+        image: 123456789012.dkr.ecr.ap-southeast-1.amazonaws.com/qwen3-tts:latest
         env:
         - name: TTS_BACKEND
           value: "official"
@@ -111,6 +111,27 @@ spec:
         effect: NoSchedule
       nodeSelector:
         node-type: gpu
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 50
+            preference:
+              matchExpressions:
+              - key: node.kubernetes.io/instance-type
+                operator: In
+                values: ["g6.xlarge", "g6.2xlarge", "g6.4xlarge"]
+          - weight: 30
+            preference:
+              matchExpressions:
+              - key: node.kubernetes.io/instance-type
+                operator: In
+                values: ["g5.xlarge", "g5.2xlarge", "g5.4xlarge"]
+          - weight: 20
+            preference:
+              matchExpressions:
+              - key: node.kubernetes.io/instance-type
+                operator: In
+                values: ["g4dn.xlarge", "g4dn.2xlarge", "g4dn.4xlarge"]
 
       restartPolicy: Always
 
