--- a/applications/qwen3-speech/qwen3-tts-base-deployment.yaml
+++ b/applications/qwen3-speech/qwen3-tts-base-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: qwen3-tts
+  name: qwen3-tts-base
   namespace: hosthree
   labels:
-    app: qwen3-tts
+    app: qwen3-tts-base
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: qwen3-tts
+      app: qwen3-tts-base
   template:
     metadata:
       labels:
-        app: qwen3-tts
+        app: qwen3-tts-base
     spec:
       initContainers:
       - name: model-downloader
@@ -24,13 +24,13 @@ spec:
         - bash
         - -c
         - |
-          MODEL_DIR="/models/Qwen3-TTS-CustomVoice"
+          MODEL_DIR="/models/Qwen3-TTS-Base"
           if ls "$MODEL_DIR"/*.safetensors 1>/dev/null 2>&1 && [ -f "$MODEL_DIR/config.json" ]; then
             echo "Model complete, skipping download"
           else
             echo "Model incomplete or missing, downloading..."
             rm -rf "$MODEL_DIR"
-            huggingface-cli download Qwen/Qwen3-TTS-12Hz-1.7B-CustomVoice --local-dir "$MODEL_DIR"
+            huggingface-cli download Qwen/Qwen3-TTS-12Hz-1.7B-Base --local-dir "$MODEL_DIR"
           fi
         volumeMounts:
         - name: models
@@ -45,12 +45,12 @@ spec:
 
       containers:
       - name: tts
-        image: 123456789012.dkr.ecr.ap-southeast-1.amazonaws.com/qwen3-tts:latest
+        image: 123456789012.dkr.ecr.us-west-2.amazonaws.com/qwen3-tts:latest
         env:
         - name: TTS_BACKEND
           value: "official"
         - name: TTS_MODEL_ID
-          value: "/models/Qwen3-TTS-CustomVoice"
+          value: "/models/Qwen3-TTS-Base"
         - name: TTS_DEVICE
           value: "auto"
         - name: TTS_DTYPE
@@ -60,11 +60,11 @@ spec:
         - name: HOST
           value: "0.0.0.0"
         - name: PORT
-          value: "8880"
+          value: "8860"
         - name: TTS_WARMUP_ON_START
           value: "true"
         ports:
-        - containerPort: 8880
+        - containerPort: 8860
           name: http
         volumeMounts:
         - name: models
@@ -82,19 +82,19 @@ spec:
         startupProbe:
           httpGet:
             path: /health
-            port: 8880
+            port: 8860
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 30
         livenessProbe:
           tcpSocket:
-            port: 8880
+            port: 8860
           periodSeconds: 30
           failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /health
-            port: 8880
+            port: 8860
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 3
@@ -139,17 +139,16 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: qwen3-tts-service
+  name: qwen3-tts-base-service
   namespace: hosthree
   labels:
-    app: qwen3-tts
+    app: qwen3-tts-base
 spec:
   type: ClusterIP
   ports:
   - port: 80
-    targetPort: 8880
+    targetPort: 8860
     protocol: TCP
     name: http
   selector:
-    app: qwen3-tts
-
+    app: qwen3-tts-base
